Fix covered headings

--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,7 @@
 .home__heading {
   font-size: 100px;
   margin-bottom: 30px;
+  margin-top: 75px;
   background: #373b44; /* old browsers */
   background: -webkit-linear-gradient(to right, #c4e0e5, #4ca1af);
   background: linear-gradient(to right, #c4e0e5, #4ca1af);
@@ -417,6 +418,7 @@
   color: #2599ab;
   font-size: 50px;
   margin-bottom: 45px;
+  margin-top: 40px;
 }
 
 .projects__wrapper {
